# FastIDV

./: .gitignore  README.md  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 004_add_secret_field.py  005_use_biginteger_instead_of_integer.py  0b53ae9a5571_initial_commit_create_users_table.py  23a5906e3d48_remove_username_field_and_add_email_.py  489dda4a30a7_add_hashed_password_field.py  4ebffefee818_add_date_in_nid_table.py  706fe4a4a6dd_add_nid_path_to_user_table.py  8ef852787040_foreignkey.py  d96d91446a45_initial.py
app/: main.py
app/api/routes/: biscuits.py  idv.py  users.py
app/core/: config.py  dependencies.py
app/db/: database.py
app/models/: user.py
app/schemas/: IDV.py  user.py
app/services/: deekseekocr.py  deepface.py  llm.py
app/utils/: jwt.py  security.py
