[project]
name = "fastidv"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "tortoise>=0.1.1",
]

[tool.ruff]
exclude = [
    "alembic/versions/*.py",
]
